rabbitmq/rabbitmq-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
