rabbitmq/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: rabbitmq
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /rabbitmq/(.*)
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
